--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
