--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "aedes": "^0.51.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "mongoose": "^8.18.0",
-    "socket.io": "^4.8.1"
+    "net": "^1.0.2",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
